DragonLangParser.java
// Generated from DragonLang.g4 by ANTLR 4.7.2

    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DragonLangParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSE=2, WHILE=3, DO=4, BREAK=5, TRUE=6, FALSE=7, INT=8, FLOAT=9, 
		BOOLEAN=10, ASSIGN=11, LT=12, GT=13, LE=14, GE=15, EQ=16, NE=17, AND=18, 
		OR=19, NOT=20, PLUS=21, MINUS=22, TIMES=23, DIVIDE=24, SEMICOLON=25, COMMA=26, 
		LPAREN=27, RPAREN=28, LBRACE=29, RBRACE=30, LBRACKET=31, RBRACKET=32, 
		NUM=33, REAL=34, ID=35, LINE_COMMENT=36, BLOCK_COMMENT=37, WS=38;
	public static final int
		RULE_program = 0, RULE_block = 1, RULE_decls = 2, RULE_decl = 3, RULE_id_list = 4, 
		RULE_type_rule = 5, RULE_basic = 6, RULE_stmts = 7, RULE_stmt = 8, RULE_loc = 9, 
		RULE_bool = 10, RULE_join = 11, RULE_equality = 12, RULE_rel = 13, RULE_expr = 14, 
		RULE_term = 15, RULE_unary = 16, RULE_factor = 17;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "block", "decls", "decl", "id_list", "type_rule", "basic", 
			"stmts", "stmt", "loc", "bool", "join", "equality", "rel", "expr", "term", 
			"unary", "factor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'else'", "'while'", "'do'", "'break'", "'true'", "'false'", 
			"'int'", "'float'", "'boolean'", "'='", "'<'", "'>'", "'<='", "'>='", 
			"'=='", "'!='", "'&&'", "'||'", "'!'", "'+'", "'-'", "'*'", "'/'", "';'", 
			"','", "'('", "')'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSE", "WHILE", "DO", "BREAK", "TRUE", "FALSE", "INT", "FLOAT", 
			"BOOLEAN", "ASSIGN", "LT", "GT", "LE", "GE", "EQ", "NE", "AND", "OR", 
			"NOT", "PLUS", "MINUS", "TIMES", "DIVIDE", "SEMICOLON", "COMMA", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "NUM", "REAL", 
			"ID", "LINE_COMMENT", "BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DragonLang.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    // =============== Symbol table & scopes ===============

	    private Env currentEnv = null;    // current environment
	    private int scopeLevel = 0;       // nesting level of Env chain

	    // Stack: whether each parsed block actually pushed a scope
	    private java.util.Deque<Boolean> blockPushed = new java.util.ArrayDeque<>();

	    // Block nesting depth for { ... }:
	    //  blockDepth == 0 : program's outermost block
	    private int blockDepth = 0;

	    // Called at start of program
	    public void initializeGlobalScope() {
	        currentEnv = new Env(null);  // global scope (outermost)
	        scopeLevel = 0;
	        blockDepth = 0;
	    }

	    // Create new Env for nested block
	    public void enterScope() {
	        currentEnv = new Env(currentEnv);
	        scopeLevel++;
	        System.out.println(">>> Entering new scope (Level " + scopeLevel + ")");
	    }

	    // Pop Env at end of nested block
	    public void exitScope() {
	        if (currentEnv != null && currentEnv.prev != null) {
	            currentEnv = currentEnv.prev;
	            System.out.println(">>> Exiting scope (returning to Level " + (scopeLevel - 1) + ")");
	            scopeLevel--;
	        }
	    }

	    private void addIdentifier(String name, Type t) {
	        if (currentEnv == null || t == null) return;
	        Symbol sym = new Symbol(name, t);     // matches Symbol(String, Type)
	        currentEnv.put(name, sym);
	        System.out.println(">>> Added to symbol table: " + sym);
	    }

	    private void noteLookup(String name) {
	        if (currentEnv == null) return;
	        Symbol s = currentEnv.get(name);
	        if (s == null) {
	            System.out.println(">>> Warning: Undeclared identifier '" + name + "'");
	        } else {
	            System.out.println(">>> Found identifier: " + s);
	        }
	    }

	    public void printFinalSymbolTable() {
	        System.out.println("\n================================================================================");
	        System.out.println("=== FINAL SYMBOL TABLE STATE ===\n");
	        if (currentEnv != null) {
	            currentEnv.printSymbolTable();   // your Env.printSymbolTable()
	        }
	        System.out.println("================================================================================");
	    }

	    // Build a base Type from basic token text
	    private Type makeBase(String txt) {
	        switch (txt) {
	            case "int":     return new Type(Type.BaseType.INT);
	            case "float":   return new Type(Type.BaseType.FLOAT);
	            case "boolean": return new Type(Type.BaseType.BOOLEAN);
	            default:        return null;
	        }
	    }

	public DragonLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(DragonLangParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{

			          initializeGlobalScope();
			          System.out.println("program -> block");
			      
			setState(37);
			block();
			setState(38);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(DragonLangParser.LBRACE, 0); }
		public DeclsContext decls() {
			return getRuleContext(DeclsContext.class,0);
		}
		public StmtsContext stmts() {
			return getRuleContext(StmtsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(DragonLangParser.RBRACE, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(LBRACE);

			            System.out.println("block -> { decls stmts }");

			            boolean didPush;
			            if (blockDepth == 0) {
			                // Outermost block of program: use existing global Env
			                didPush = false;
			            } else {
			                // Nested block: create a new Env
			                enterScope();
			                didPush = true;
			            }
			            blockDepth++;
			            blockPushed.push(Boolean.valueOf(didPush));
			        
			setState(42);
			decls();
			setState(43);
			stmts();
			setState(44);
			match(RBRACE);

			            blockDepth--;
			            boolean didPushExit = blockPushed.pop().booleanValue();
			            if (didPushExit) {
			                exitScope();
			            }
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclsContext extends ParserRuleContext {
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public DeclsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decls; }
	}

	public final DeclsContext decls() throws RecognitionException {
		DeclsContext _localctx = new DeclsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decls);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN))) != 0)) {
				{
				{
				setState(47);
				decl();
				 System.out.println("decls -> decls decl"); 
				}
				}
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 System.out.println("decls -> epsilon"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public Type_ruleContext t;
		public Id_listContext id_list() {
			return getRuleContext(Id_listContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DragonLangParser.SEMICOLON, 0); }
		public Type_ruleContext type_rule() {
			return getRuleContext(Type_ruleContext.class,0);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			((DeclContext)_localctx).t = type_rule();
			setState(58);
			id_list(((DeclContext)_localctx).t.val);
			setState(59);
			match(SEMICOLON);

			            System.out.println("decl -> type id_list ;");
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Id_listContext extends ParserRuleContext {
		public Type t;
		public Token ID;
		public List<TerminalNode> ID() { return getTokens(DragonLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DragonLangParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DragonLangParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DragonLangParser.COMMA, i);
		}
		public Id_listContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Id_listContext(ParserRuleContext parent, int invokingState, Type t) {
			super(parent, invokingState);
			this.t = t;
		}
		@Override public int getRuleIndex() { return RULE_id_list; }
	}

	public final Id_listContext id_list(Type t) throws RecognitionException {
		Id_listContext _localctx = new Id_listContext(_ctx, getState(), t);
		enterRule(_localctx, 8, RULE_id_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			((Id_listContext)_localctx).ID = match(ID);
			 addIdentifier((((Id_listContext)_localctx).ID!=null?((Id_listContext)_localctx).ID.getText():null), _localctx.t); 
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(64);
				match(COMMA);
				setState(65);
				((Id_listContext)_localctx).ID = match(ID);
				 addIdentifier((((Id_listContext)_localctx).ID!=null?((Id_listContext)_localctx).ID.getText():null), _localctx.t); 
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_ruleContext extends ParserRuleContext {
		public Type val;
		public BasicContext b;
		public Token NUM;
		public BasicContext basic() {
			return getRuleContext(BasicContext.class,0);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(DragonLangParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(DragonLangParser.LBRACKET, i);
		}
		public List<TerminalNode> NUM() { return getTokens(DragonLangParser.NUM); }
		public TerminalNode NUM(int i) {
			return getToken(DragonLangParser.NUM, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(DragonLangParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(DragonLangParser.RBRACKET, i);
		}
		public Type_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_rule; }
	}

	public final Type_ruleContext type_rule() throws RecognitionException {
		Type_ruleContext _localctx = new Type_ruleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			((Type_ruleContext)_localctx).b = basic();

			            ((Type_ruleContext)_localctx).val =  makeBase((((Type_ruleContext)_localctx).b!=null?_input.getText(((Type_ruleContext)_localctx).b.start,((Type_ruleContext)_localctx).b.stop):null));
			        
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACKET) {
				{
				{
				setState(74);
				match(LBRACKET);
				setState(75);
				((Type_ruleContext)_localctx).NUM = match(NUM);
				setState(76);
				match(RBRACKET);

				                _localctx.val.addDimension(Integer.parseInt((((Type_ruleContext)_localctx).NUM!=null?((Type_ruleContext)_localctx).NUM.getText():null)));
				            
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(DragonLangParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(DragonLangParser.FLOAT, 0); }
		public TerminalNode BOOLEAN() { return getToken(DragonLangParser.BOOLEAN, 0); }
		public BasicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basic; }
	}

	public final BasicContext basic() throws RecognitionException {
		BasicContext _localctx = new BasicContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_basic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << FLOAT) | (1L << BOOLEAN))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtsContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_stmts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << WHILE) | (1L << DO) | (1L << BREAK) | (1L << LBRACE) | (1L << ID))) != 0)) {
				{
				{
				setState(85);
				stmt();
				 System.out.println("stmts -> stmts stmt"); 
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 System.out.println("stmts -> epsilon"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public LocContext loc() {
			return getRuleContext(LocContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(DragonLangParser.ASSIGN, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(DragonLangParser.SEMICOLON, 0); }
		public TerminalNode IF() { return getToken(DragonLangParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(DragonLangParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(DragonLangParser.RPAREN, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(DragonLangParser.ELSE, 0); }
		public TerminalNode WHILE() { return getToken(DragonLangParser.WHILE, 0); }
		public TerminalNode DO() { return getToken(DragonLangParser.DO, 0); }
		public TerminalNode BREAK() { return getToken(DragonLangParser.BREAK, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stmt);
		try {
			setState(135);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				loc();
				setState(96);
				match(ASSIGN);
				setState(97);
				bool();
				setState(98);
				match(SEMICOLON);
				 System.out.println("stmt -> loc = bool ;"); 
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(IF);
				setState(102);
				match(LPAREN);
				setState(103);
				bool();
				setState(104);
				match(RPAREN);
				setState(105);
				stmt();
				setState(111);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(106);
					match(ELSE);
					setState(107);
					stmt();
					 System.out.println("stmt -> if ( bool ) stmt else stmt"); 
					}
					break;
				case 2:
					{
					 System.out.println("stmt -> if ( bool ) stmt"); 
					}
					break;
				}
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				match(WHILE);
				setState(114);
				match(LPAREN);
				setState(115);
				bool();
				setState(116);
				match(RPAREN);
				setState(117);
				stmt();
				 System.out.println("stmt -> while ( bool ) stmt"); 
				}
				break;
			case DO:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				match(DO);
				setState(121);
				stmt();
				setState(122);
				match(WHILE);
				setState(123);
				match(LPAREN);
				setState(124);
				bool();
				setState(125);
				match(RPAREN);
				setState(126);
				match(SEMICOLON);
				 System.out.println("stmt -> do stmt while ( bool ) ;"); 
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 5);
				{
				setState(129);
				match(BREAK);
				setState(130);
				match(SEMICOLON);
				 System.out.println("stmt -> break ;"); 
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				block();
				 System.out.println("stmt -> block"); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LocContext extends ParserRuleContext {
		public Token ID;
		public TerminalNode ID() { return getToken(DragonLangParser.ID, 0); }
		public List<TerminalNode> LBRACKET() { return getTokens(DragonLangParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(DragonLangParser.LBRACKET, i);
		}
		public List<BoolContext> bool() {
			return getRuleContexts(BoolContext.class);
		}
		public BoolContext bool(int i) {
			return getRuleContext(BoolContext.class,i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(DragonLangParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(DragonLangParser.RBRACKET, i);
		}
		public LocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loc; }
	}

	public final LocContext loc() throws RecognitionException {
		LocContext _localctx = new LocContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_loc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			((LocContext)_localctx).ID = match(ID);

			            noteLookup((((LocContext)_localctx).ID!=null?((LocContext)_localctx).ID.getText():null));
			        
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LBRACKET) {
				{
				{
				setState(139);
				match(LBRACKET);
				setState(140);
				bool();
				setState(141);
				match(RBRACKET);
				 System.out.println("loc -> loc [ bool ]"); 
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			 System.out.println("loc -> id"); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
